# holiday-peak-hub

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.MD  SECURITY.MD  azure.yaml  conftest.py  pr_body.md  pyproject.toml
.azure/: README.md
.githooks/: pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-setup-steps.yml
.github/agents/: Architecture_Patterns.agent.md  Enterprise_Connectors.agent.md  Platform_Quality.agent.md  Truth_Layer_Pipeline.agent.md  cataldi-librarian.agent.md  code-guidelines-agent.agent.md  platform-quality.agent.md  pr-evaluator.agent.md  report-generator.agent.md  system-architect.agent.md  tech-manager.agent.md  ui-agent.agent.md
.github/instructions/: repository-purpose.instructions.md  team-mapping.instructions.md
.github/prompts/: documentation-full-review.prompt.md  fix-issues-pipeline.prompt.md  issue-engineering-with-process.prompt.md  platform-quality-evaluation.prompt.md  tech-lead-issue-execute.prompt.md  tech-lead-plan.prompt.md
.github/workflows/: ci.yml  codeql.yml  dependency-audit.yml  deploy-azd-crm-campaign-intelligence.yml  deploy-azd-crm-profile-aggregation.yml  deploy-azd-crm-segmentation-personalization.yml  deploy-azd-crm-support-assistance.yml  deploy-azd-crud-service.yml  deploy-azd-dev.yml  deploy-azd-ecommerce-cart-intelligence.yml  deploy-azd-ecommerce-catalog-search.yml  deploy-azd-ecommerce-checkout-support.yml  deploy-azd-ecommerce-order-status.yml  deploy-azd-ecommerce-product-detail-enrichment.yml  deploy-azd-inventory-alerts-triggers.yml  deploy-azd-inventory-health-check.yml  deploy-azd-inventory-jit-replenishment.yml  deploy-azd-inventory-reservation-validation.yml  deploy-azd-logistics-carrier-selection.yml  deploy-azd-logistics-eta-computation.yml  deploy-azd-logistics-returns-support.yml  deploy-azd-logistics-route-issue-detection.yml  deploy-azd-prod.yml  deploy-azd-product-management-acp-transformation.yml  deploy-azd-product-management-assortment-optimization.yml  deploy-azd-product-management-consistency-validation.yml  deploy-azd-product-management-normalization-classification.yml  deploy-azd-search-enrichment-agent.yml  deploy-azd-service.yml  deploy-azd-truth-enrichment.yml  deploy-azd-truth-export.yml  deploy-azd-truth-hitl.yml  deploy-azd-truth-ingestion.yml  deploy-azd-truth.yml  deploy-azd.yml  deploy-ui-swa.yml  docs-consistency-audit.yml  eval-advisory.yml  eval-continuous.yml  eval-gate.yml  (+11 more)
.infra/: DEPLOYMENT.md  README.md  SUMMARY.md  cli.py  config-cli.sh
.infra/apim-policies/: agent-api-policy.xml  agent-stream-operation-policy.xml
.infra/azd/: main.bicep  main.parameters.json
.infra/templates/: Dockerfile.template  app.bicep.tpl  main.bicep.tpl
.infra/tests/: test_cli_azd.py  test_crud_agc_route_contract.py  test_deploy_azd_agc_readiness_contract.py  test_deploy_azd_apim_smoke_contract.py  test_deploy_azd_detect_changes_contract.py  test_deploy_azd_flux_restore_contract.py  test_deploy_azd_foundry_surfaces_contract.py  test_deploy_azd_publication_context_contract.py  test_deploy_ui_swa_contract.py  test_sync_apim_policy_contract.py
.kubernetes/chart/: Chart.yaml  values.yaml
apps/: README.md  conftest.py  foundry-surfaces.yaml
apps/agentic-shopper-foundry-demo/: .gitignore  README.md  requirements.txt  run_server.py
apps/crm-campaign-intelligence/: README.md  agent.yaml
apps/crm-profile-aggregation/: README.md  agent.yaml
apps/crm-segmentation-personalization/: README.md  agent.yaml
apps/crm-support-assistance/: README.md  agent.hosted.yaml  agent.yaml
apps/crm-support-assistance/src/: Dockerfile  pyproject.toml  requirements.txt
apps/crm-support-assistance/src/crm_support_assistance/: adapters.py  agents.py  event_handlers.py  main.py
apps/crm-support-assistance/src/crm_support_assistance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/crm-support-assistance/src/crm_support_assistance/prompts/: instructions.md
apps/crud-service/: Dockerfile  README.md
apps/ecommerce-cart-intelligence/: README.md  agent.hosted.yaml  agent.yaml
apps/ecommerce-catalog-search/: README.md  agent.hosted.yaml  agent.yaml  (+1 more)
apps/inventory-alerts-triggers/src/: Dockerfile  pyproject.toml  requirements.txt
apps/inventory-alerts-triggers/src/inventory_alerts_triggers/: adapters.py  agents.py  event_handlers.py  main.py
apps/inventory-alerts-triggers/src/inventory_alerts_triggers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/inventory-alerts-triggers/src/inventory_alerts_triggers/prompts/: instructions.md
apps/inventory-health-check/src/: Dockerfile  pyproject.toml  requirements.txt
apps/inventory-health-check/src/inventory_health_check/: adapters.py  agents.py  event_handlers.py  hosted_main.py  main.py
apps/inventory-health-check/src/inventory_health_check.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/inventory-reservation-validation/src/: Dockerfile  pyproject.toml  requirements.txt
apps/inventory-reservation-validation/src/inventory_reservation_validation/: adapters.py  agents.py  event_handlers.py  main.py
apps/inventory-reservation-validation/src/inventory_reservation_validation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/logistics-returns-support/src/: Dockerfile  pyproject.toml  requirements.txt
apps/logistics-returns-support/src/logistics_returns_support/: adapters.py  agents.py  event_handlers.py  main.py
apps/logistics-returns-support/src/logistics_returns_support.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/logistics-returns-support/src/logistics_returns_support/prompts/: instructions.md
connectors/: README.md
docs/: IMPLEMENTATION_ROADMAP.md  README.md  agentic-microservices-reference.md  backend_plan.md  crud-features-map.md  project-status.md
lib/: README.md  TEST_COVERAGE_SUMMARY.md
mkdocs/: mkdocs.yml  requirements.txt
samples/: README.md
scripts/: README.md  RECONCILE-POSTGRES.md
(+1654 files in other folders)
