[project]
name = "crm-support-assistance"
version = "0.1.0"
description = "CRM support assistance"
authors = [{name = "Ricardo Cataldi", email = "rcataldi@microsoft.com"}]
requires-python = ">=3.13"
dependencies = ["fastapi", "fastapi-mcp", "uvicorn", "pydantic>=2", "agent-framework", "azure-ai-projects>=2.0.0b4", "azure-identity", "azure-search-documents", "azure-cosmos", "azure-storage-blob", "azure-eventhub", "redis", "asyncpg", "holiday-peak-lib @ git+https://github.com/Azure-Samples/holiday-peak-hub.git@v1.0.0#subdirectory=lib/src"]

[project.optional-dependencies]
dev = ["faker", "pre-commit", "python-dotenv", "debugpy"]
test = ["pytest", "pytest-cov", "pytest-asyncio", "httpx", "requests"]
lint = ["pylint", "isort", "black[jupyter]>=25.1.0"]

[tool.pytest.ini_options]
addopts = "-ra -q -s --cov=crm_support_assistance --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
