[project]
name = "inventory-health-check"
version = "0.1.0"
description = "Inventory health check"
authors = [{name = "Ricardo Cataldi", email = "rcataldi@microsoft.com"}]
requires-python = ">=3.13"
# ``agent-framework-foundry-hosting`` is the preview ResponsesHostServer SDK
# used by the Foundry Hosted Agent FastAPI-mount pilot (lib/.../hosted.py).
# It is imported lazily inside ``BaseRetailAgent.serve_hosted`` and the mount
# is runtime-gated by ``HOLIDAY_PEAK_FOUNDRY_HOSTED`` (default on, set to ``0``
# to skip). The pyproject declaration is the contract; lock + requirements
# regeneration must be run with ``uv lock --prerelease=allow`` against the
# preview index that publishes the alpha build.
dependencies = ["fastapi>=0.135.3", "fastapi-mcp", "uvicorn>=0.44.0", "pydantic>=2", "agent-framework>=1.0.1", "agent-framework-foundry-hosting>=1.0.0a0", "azure-ai-projects>=2.0.1", "azure-identity", "azure-search-documents", "azure-cosmos", "azure-storage-blob", "azure-eventhub", "redis>=7.4.0", "asyncpg>=0.30.0", "holiday-peak-lib>=0.2.0"]

[project.optional-dependencies]
dev = ["faker", "pre-commit", "python-dotenv", "debugpy"]
test = ["pytest", "pytest-cov", "pytest-asyncio", "httpx", "requests"]
lint = ["pylint", "isort", "black[jupyter]>=25.1.0"]

[tool.uv.sources]
holiday-peak-lib = { git = "https://github.com/Azure-Samples/holiday-peak-hub.git", branch = "main", subdirectory = "lib/src" }

[tool.pytest.ini_options]
addopts = "-ra -q -s --cov=inventory_health_check --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

